myteo/test/parser/ast/function_declaration/missing_body_error.exp
ERROR: test/parser/ast/function_declaration/missing_body_error.myte:3:10 Unexpected token "1", expected start of function body
 3 | fun foo() 1
   |           ^