myteo/test/parser/ast/function_declaration/missing_body_error.myte
module Test

fun foo() 1